--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,21 @@
     "description": "PHP API Wrapper for the Duolingo API",
     "type": "library",
     "require": {
+        "php": "^7.4",
         "guzzlehttp/guzzle": "^7.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "Mickadoo\\Duolingo\\": "src"
+        }
     },
     "require-dev": {
         "phpunit/phpunit": "^9.4"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Test\\": "test"
+        }
     },
     "license": "MIT",
     "authors": [
