--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
     "type": "library",
     "require": {
         "php": "^7.4",
-        "guzzlehttp/guzzle": "^7.2"
+        "ext-json": "*",
+        "guzzlehttp/guzzle": "^7.2",
+        "symfony/serializer": "^5.1",
+        "symfony/property-access": "^5.1"
     },
     "autoload": {
         "psr-4": {
