--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
             "Mickadoo\\DuolingoEvents\\": "src"
         }
     },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
+    },
     "require-dev": {
         "phpunit/phpunit": "^9.4"
     },
